--- a/Frontend/assets/css/g-style.css
+++ b/Frontend/assets/css/g-style.css
@@ -14,8 +14,7 @@ legend {
     font-variant: small-caps;
 }
 
-
-.et-text {
+.et-Text {
     font-family: "Consolas", sans-serif;
 }
 
@@ -27,6 +26,26 @@ legend {
     width: 50px;
     height: 50px;
     animation: spin 0.5s linear infinite;
+}
+
+.et-Controls {
+    opacity: 0;
+    display: flex;
+    justify-content: flex-end;
+    transition: all .1s;
+}
+
+.et-Button {
+    font-family: "Trebuchet MS", sans-serif;
+    font-variant: small-caps;
+}
+
+.et-Button:nth-child(1) {
+    margin: 0 10px;
+}
+
+.et-adminField:hover .et-Controls {
+    opacity: 1;
 }
 
 @keyframes spin {
